# rust_blog

./: .gitignore  Cargo.toml  README.md  build.rs  config.yml.tpl
migrations/2022-10-27-163756_all/: up.sql
proto/: pb.proto
src/: config.rs  crontab.rs  db.rs  lib.rs  main.rs  middlewares.rs  routers.rs  schema.rs
src/handlers/: base.rs  e.rs  handlers.rs  mod.rs  user.rs  websocket.rs
src/models/: article.rs  comment.rs  entity.rs  mod.rs  wrapper.rs
src/proto/: gen_proto.sh  mod.rs  pb.proto  pb.rs
src/utils/: cache.rs  captcha.rs  crypt.rs  e.rs  github.rs  jwt.rs  mod.rs  request.rs
