[package]
name = "rust_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-protobuf = "0.8"
actix-web = "4"
async-std = "1.12.0"
captcha = "0.0.9"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.0", features = ["r2d2", "mysql"] }
dotenvy = "0.15"
env_logger = "0.9"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
json = "0.12"
log = "0.4"
once_cell = "1.12.0"
prost = { version = "0.10.4", default-features = false, features = ["prost-derive"] }
protobuf = { version = "3.1", features = ["with-bytes"] }
rbatis = "4.0.35"
rbdc = "0.1.20"
rbdc-mysql = "0.1.15"
redis = { version = "0.22.1", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rbs = { version = "0.1"}
tokio = { version = "1.20.1" }


[build-dependencies]
protobuf-codegen = { version = "3.1" }
prost-build = "0.5"
